# nhansinhnhulu

./: .env.example  CLAUDE.md  DEPLOY.md
.ai/: CONTEXT.md  PROGRESS.md  README.md
.ai/planning/: 00-roadmap.md  01-architecture.md  02-data-model.md  03-landing.md  04-admin.md  05-discord-bot.md  06-api-contract.md  07-raid-announce.md  08-3vs3-battle-feature.md  09-co-5-quan-feature.md  09a-co-5-quan-ui-plan.md  10-3vs3-battle-feature.md  11-3vs3-balanced-teams.md  12-3v3-double-elim.md
.ai/prompts/: bot-agent.md  frontend-agent.md  orchestrator.md
.ai/rules/: engineering.md  git-workflow.md  security.md
.ai/skills/: discord-bot.md  nextjs-app.md  ui-ux-pro.md
.ai/specs/: open-questions.md
.claude/: settings.local.json
bot/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
bot/bot/: __init__.py  api.py  client.py  config.py  notify_server.py  time_utils.py
bot/bot/commands/: __init__.py  help.py  myplan.py  raids.py
bot/bot/views/: __init__.py  raid_select.py
bot/nsnl_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web/: AGENTS.md  next.config.ts  package-lock.json  package.json  proxy.ts
web/app/: globals.css  layout.tsx
web/app/(public)/: page.tsx
web/components/admin/: AdminNav.tsx  ArenaPanel.tsx  BattlePanel.tsx  BracketTree.tsx  DungeonsTable.tsx  MemberPicker.tsx  (+4 more)
web/lib/: arena.ts  assets.ts  auth.ts  battle.ts  botAuth.ts  botClient.ts  classes.ts  db.ts  discord.ts  discordClient.ts  dto.ts  mockData.ts  queries.ts  rateLimit.ts  time.ts  tournament.ts  validators.ts
web/scripts/: seed.mts
(+94 files in other folders)
