[project]
name = "nsnl-bot"
version = "0.1.0"
description = "Discord bot for Nhân Sinh Như Lữ (NSNL) — Pattern B (talks only to web /api/bot/*)."
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
